// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BeanField > PrefixedBeanField > should render 1`] = `
<div>
  <div
    class="cds--stack-vertical cds--stack-scale-3"
    data-testid="#__field-wrapper"
  >
    <div
      class="kaoto-field-wrapper__label-container"
    >
      <label
        class="kaoto-field-wrapper__label"
      >
        #
      </label>
      <button
        aria-label="More info for # field"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
          />
          <path
            d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
          />
        </svg>
      </button>
      <p>
        <strong>
          #
           
          &lt;string&gt;
        </strong>
      </p>
      <p />
      <p>
        Default: 
        no default value
      </p>
    </div>
    <div>
      <div
        class="cds--list-box__wrapper"
      >
        <div
          class="cds--combo-box cds--list-box"
        >
          <div
            class="cds--list-box__field"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="downshift-_r_2_-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="#"
              autocomplete="off"
              class="cds--text-input"
              data-testid="#"
              id="#"
              placeholder="Select or write an option"
              role="combobox"
              tabindex="0"
              type="text"
              value="#dataSource"
            />
            <button
              aria-label="Clear selected item"
              class="cds--list-box__selection"
              tabindex="-1"
              title="Clear selected item"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
            <button
              aria-controls="downshift-_r_2_-menu"
              aria-expanded="false"
              aria-label="Open"
              class="cds--list-box__menu-icon"
              id="downshift-_r_2_-toggle-button"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <ul
            aria-labelledby="downshift-_r_2_-label"
            class="cds--list-box__menu"
            id="downshift-_r_2_-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BeanField > UnprefixedBeanField > should render 1`] = `
<div>
  <div
    class="cds--stack-vertical cds--stack-scale-3"
    data-testid="#__field-wrapper"
  >
    <div
      class="kaoto-field-wrapper__label-container"
    >
      <label
        class="kaoto-field-wrapper__label"
      >
        #
      </label>
      <button
        aria-label="More info for # field"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
          />
          <path
            d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
          />
        </svg>
      </button>
      <p>
        <strong>
          #
           
          &lt;string&gt;
        </strong>
      </p>
      <p />
      <p>
        Default: 
        no default value
      </p>
    </div>
    <div>
      <div
        class="cds--list-box__wrapper"
      >
        <div
          class="cds--combo-box cds--list-box"
        >
          <div
            class="cds--list-box__field"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="downshift-_r_ot_-menu"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="#"
              autocomplete="off"
              class="cds--text-input"
              data-testid="#"
              id="#"
              placeholder="Select or write an option"
              role="combobox"
              tabindex="0"
              type="text"
              value="dataSource"
            />
            <button
              aria-label="Clear selected item"
              class="cds--list-box__selection"
              tabindex="-1"
              title="Clear selected item"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
            <button
              aria-controls="downshift-_r_ot_-menu"
              aria-expanded="false"
              aria-label="Open"
              class="cds--list-box__menu-icon"
              id="downshift-_r_ot_-toggle-button"
              tabindex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <ul
            aria-labelledby="downshift-_r_ot_-label"
            class="cds--list-box__menu"
            id="downshift-_r_ot_-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
